# DoNotes

./: .env.example  .gitignore  README.md  __main__.py  pyproject.toml  setup_menubar.py
config/: calendars.py  prompts.py  settings.py  user_profile.example.py  vocabulary.py
launchd/: com.donotes.bot.plist  install.sh
menubar/: __main__.py  app.py  constants.py  log_tailer.py  process_manager.py
scripts/: migrate_db.py  setup_google_oauth.py
src/ai/: client.py  email_composer.py  extractor.py  schemas.py
src/bot/: app.py  callbacks.py  email_flow.py  formatters.py  handlers.py
src/core/: dedup.py  email_suggestions.py  people.py  processor.py
src/integrations/: calendar.py  gmail.py  google_auth.py  sheets.py
src/integrations/templates/: composed_email.html  digest_email.html  morning_brief_email.html
src/storage/: database.py  models.py  repositories.py
src/storage/migrations/: 001_initial.sql
src/transcription/: audio_utils.py  pipeline.py  whisper_mlx.py
wizard/: __init__.py  __main__.py  app.py  bot_launcher.py  file_writer.py  oauth.py  validators.py
wizard/static/css/: wizard.css
wizard/static/js/: wizard.js
wizard/templates/: wizard.html
